@@ -83,3 +83,4 @@
 20231024 ./watchlist/hia-parse-ssh.sh updated.
 20231024 ./watchlist/hia-parse-ssl.sh updated.
 20231024 ./watchlist/clean.sh added.
+20231024 ./watchlist/hia-parse-http-git.sh added.
